feat: create resources api
