# reddit_posts/dto.py
@@ -2,15 +2,21 @@ import datetime
 
 
 class RedditServiceDto:
-    def __init__(self, title, author_fullname, author, created, ups, num_comments, **kwargs):
+    def __init__(self, title: str, author_fullname: str, author: str, created: int, ups: int, num_comments: int,
+                 **kwargs):
         self.title = title
-        self.author_id = author_fullname
-        self.author = author
+        self.author = author_fullname
+        self.author_name = author
         self.created = created
         self.ups = ups
         self.num_comments = num_comments
 
-    def __repr__(self):
-        return f'({self.author_id}, {self.title}, ups={self.ups}, comments={self.num_comments})'
-
-
+    def to_json(self) -> dict:
+        return dict(
+            title=self.title,
+            author=self.author,
+            author_name=self.author_name,
+            created=datetime.datetime.fromtimestamp(self.created),
+            ups=self.ups,
+            comments=self.num_comments
+        )
